--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -186,6 +186,8 @@
     <Compile Include="ModManagement\VirtualModActivator\VirtualModActivator.cs" />
     <Compile Include="ModManagement\VirtualModInfo.cs" />
     <Compile Include="ModManagement\VirtualModLink.cs" />
+    <Compile Include="ModRepositories\NexusModsApi\ApiCallManager.cs" />
+    <Compile Include="ModRepositories\NexusModsApi\RateLimit.cs" />
     <Compile Include="ModRepositories\Nexus\NexusLinks.cs" />
     <Compile Include="ModRepositories\Nexus\NexusToken.cs" />
     <Compile Include="Mods\NexusMod.cs" />
@@ -700,6 +702,9 @@
       <HintPath>..\lib\ObjectListView.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="RestSharp, Version=106.6.7.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <HintPath>..\Stage\packages\RestSharp.106.6.7\lib\net452\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="SevenZipSharp, Version=1.1.91.0, Culture=neutral, PublicKeyToken=c8ff6ba0184838bb, processorArchitecture=MSIL">
       <HintPath>..\Stage\packages\Squid-Box.SevenZipSharp.1.1.91\lib\net45\SevenZipSharp.dll</HintPath>
     </Reference>
@@ -721,6 +726,7 @@
     </Reference>
     <Reference Include="System.ServiceModel.Web">
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq">
