--- a/NexusClient/packages.config
+++ b/NexusClient/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="RestSharp" version="106.6.7" targetFramework="net46" />
   <package id="Squid-Box.SevenZipSharp" version="1.1.91" targetFramework="net46" />
 </packages>
